# cuckoo-echo

./: .env.ci  .env.docker  .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml  verify_all_imports.py
.github/workflows/: ci.yml  e2e.yml  frontend-ci.yml  integration.yml
.hypothesis/constants/: 00a205342cbefd21  027cb66a7bd01423  03f369a63666b1b0  11dd39c37f5c0990  1337b602398d7459  1ca68debed4f356f  1d5a11e749a5a2e5  20300061c04c2361  28c44f264511f2aa  2f498da858ed7dfd  308dc4ca3b26a972  3827042abf32086d  3cdc277112f6030a  428e49f787543cd4  475eee2538c79130  4c03fc7f91f9f8da  55d3f00de4c588bd  58b6d020db063b6b  5b24754b85db3d77  5bfa99c168e75656  5e9ed94aea3ae061  5f5a337d41e63943  758bef896814fda9  82c55e4ad90a7161  89cc5e63f8dae804  8fe5b2dab63ebd71  93c70c200dcd9a19  97587b448d848c0d  a5e66174f4e7ce85  a95c3b71077d8fc1  a9b4195845846169  b128858357be9de4  b4a3612f5cf4d37a  beee5c31bb6a970a  bfb221954a10c1d3  c4fff543d2aeba1d  da5c47dd69a09652  dc4d3b902ca3a677  df2b992a40ff1322  ebcdd6b8a351c64e  (+1 more)
.kiro/hooks/: git-commit-on-task.kiro.hook
admin_service/: __init__.py  main.py
admin_service/middleware/: __init__.py  jwt_auth.py
admin_service/routes/: __init__.py  analytics.py  auth.py  billing.py  config.py  hitl.py  knowledge.py  metrics.py  plugins.py
ai_gateway/: __init__.py  client.py  langfuse_handler.py
api_gateway/: __init__.py  main.py
api_gateway/middleware/: auth.py  (+5 more)
asr_service/: __init__.py  main.py
chat_service/: __init__.py  main.py
docs/: api.md  architecture.md  deployment.md  development.md  performance.md  quickstart.md
frontend/: .dockerignore  .env.development  .env.integration  .eslintrc.cjs  Dockerfile  index.html  lighthouserc.js  nginx.conf  package.json  playwright.config.ts  playwright.integration.config.ts  pnpm-lock.yaml  tsconfig.app.json  tsconfig.e2e.json  tsconfig.e2e.tsbuildinfo  vite.config.ts
k8s/: Dockerfile  admin-service-deployment.yaml  api-gateway-deployment.yaml  chat-service-deployment.yaml  ingress.yaml  knowledge-pipeline-deployment.yaml  pgbouncer-configmap.yaml  prometheus-servicemonitor.yaml  secrets.example.yaml
knowledge_pipeline/: __init__.py  chunker.py  parser.py  worker.py
migrations/: 001_initial.sql  002_escalation_tables.sql  003_admin_users.sql  004_thread_memories.sql  005_feedback_table.sql
monitoring/: alert_rules.yml  prometheus.yml
openspec/: IMPROVEMENTS.md  README.md  ROADMAP.md
scripts/: Dockerfile.seed  backup.sh  dev-local.ps1  dev-local.sh  docker-entrypoint.sh  healthcheck.sh  init_milvus.py  integration-up.sh  manage_services.py  ragas_quality_gate.py  restore.sh  seed.py  seed_tenant.py  start-services.ps1  verify_e2e.sh
shared/: __init__.py  action_policy.py  analytics.py  api_marketplace.py  architecture_docs.py  billing.py  cache_backend.py  channel_adapters.py  circuit_breaker.py  citation.py  config.py  context_compressor.py  context_optimizer.py  customer_success.py  db.py  embedding_service.py  guardrails.py  health_monitor.py  hybrid_search.py  knowledge_gap.py  logging.py  memory_cache.py  memory_store.py  metrics.py  milvus_client.py  oss_client.py  output_filter.py  pii_detector.py  plugin_system.py  prompt_factory.py  prompt_template.py  prompt_versioning.py  query_rewriting.py  rbac.py  reasoning.py  redis_client.py  reranker.py  resilience.py  retry.py  semantic_cache.py  (+8 more)
(+428 files in other folders)
