[project]
name = "cuckoo-echo"
version = "0.1.0"
description = "Enterprise AI Customer Service SaaS Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "granian>=1.6.0",
    "uvicorn[standard]>=0.30.0",
    "asyncpg>=0.30.0",
    "redis[hiredis]>=5.0.0",
    "pymilvus>=2.5.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    # "langgraph-store-postgres>=0.1.0",  # Not yet published; re-enable when available
    "litellm>=1.40.0",
    "langfuse>=2.40.0",
    "sentence-transformers>=3.0.0",
    "FlagEmbedding>=1.3.0",
    "sse-starlette>=2.0.0",
    "circuitbreaker>=2.0.0",
    "docling>=2.15.0",
    "docling-core>=2.3.0",
    "orjson>=3.10.0",
    "structlog>=24.4.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "hypothesis>=6.100.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
